text content added to html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
   <title>Document</title>
 </head>
 
@@ -37,48 +39,63 @@
     <section class="hero">
       <div class="wrapper">
         <div class="hero__content">
-          <h1 class="hero__content__heading"></h1>
-          <p class="hero__content__copy"></p>
-          <button class="btn"></button>
+          <h1 class="hero__content__heading">Welcome</h1>
+          <p class="hero__content__copy">to my photography website</p>
+          <button class="btn">Start</button>
         </div>
       </div>
     </section>
     <section class="text-block">
       <div class="wrapper">
-        <h2 class="text-block__heading"></h2>
-        <p class="text-block__copy"></p>
-        <button class="btn"></button>
+        <h2 class="text-block__heading">Welcome to photography</h2>
+        <p class="text-block__copy">Suspendisse convallis turpis sem, nec tincidunt mauris tincidunt sed. Nunc vulputate feli s eu nunc moletie molestie
+          vel tempus purus. Donec sed tellus mi. Fusce tincidunt tudin arcu, nec fringilla ex he rerit eget. Maecenas fringilla
+          nequeeu est tincon. Vivamus consequat variusimperdiet. Mauris laoreet risus pharetra ollis.</p>
+        <button class="btn">More</button>
       </div>
     </section>
     <section class="features">
       <div class="wrapper">
-        <h2 class="features__heading"></h2>
+        <h2 class="features__heading">Services</h2>
         <div class="features__feature">
-          <p class="features__feature__icon"></p>
-          <h3 class="features__feature__title"></h3>
-          <p class="features__feature__copy"></p>
+          <p class="features__feature__icon">
+            <i class="fas fa-camera"></i>
+          </p>
+          <h3 class="features__feature__title">Portaits</h3>
+          <p class="features__feature__copy">Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. Sed id lobor ligula. Phasellus gravida ante nd metus
+            viverra, id.
+          </p>
         </div>
         <div class="features__feature">
-          <p class="features__feature__icon"></p>
-          <h3 class="features__feature__title"></h3>
-          <p class="features__feature__copy"></p>
+          <p class="features__feature__icon">
+            <i class="fas fa-leaf"></i>
+          </p>
+          <h3 class="features__feature__title">Scenery</h3>
+          <p class="features__feature__copy">Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. Sed id lobor ligula. Phasellus gravida ante nd metus
+            viverra, id.
+          </p>
         </div>
         <div class="features__feature">
-          <p class="features__feature__icon"></p>
-          <h3 class="features__feature__title"></h3>
-          <p class="features__feature__copy"></p>
+          <p class="features__feature__icon">
+            <i class="fas fa-heart"></i>
+          </p>
+          <h3 class="features__feature__title">Weddings</h3>
+          <p class="features__feature__copy">Lorem ipsum dolor sit amet, conse ctetur adipiscing elit. Sed id lobor ligula. Phasellus gravida ante nd metus
+            viverra, id.
+          </p>
         </div>
       </div>
     </section>
     <section class="testimonials">
       <div class="wrapper">
-        <h2 class="testimonials__heading"></h2>
+        <h2 class="testimonials__heading">Testimonials</h2>
         <div class="testimonials__content">
           <figure class="testimonials__content__figure">
             <img src="" alt="">
           </figure>
-          <h3 class="testimonials__content__subhead"></h3>
-          <p class="testimonials__content__copy"></p>
+          <h3 class="testimonials__content__subhead">Kate Sampson</h3>
+          <p class="testimonials__content__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id lob rtis ligula. Phasellus gravida ante eleifend
+            metus viverra, id tincid nibh vulputate. Donec sem odio, condimentum non aliquet vel,</p>
         </div>
       </div>
     </section>
@@ -86,35 +103,35 @@
       <figure class="horizontal-gallery__figure">
         <img src="" alt="">
         <figcaption class="horizontal-gallery__figure__caption">
-          <h3 class="horizontal-gallery__figure__caption__heading"></h3>
-          <p class="horizontal-gallery__figure__caption__copy"></p>
+          <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
+          <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </figcaption>
       </figure>
       <figure class="horizontal-gallery__figure">
         <img src="" alt="">
         <figcaption class="horizontal-gallery__figure__caption">
-          <h3 class="horizontal-gallery__figure__caption__heading"></h3>
-          <p class="horizontal-gallery__figure__caption__copy"></p>
+          <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
+          <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </figcaption>
       </figure>
       <figure class="horizontal-gallery__figure">
         <img src="" alt="">
         <figcaption class="horizontal-gallery__figure__caption">
-          <h3 class="horizontal-gallery__figure__caption__heading"></h3>
-          <p class="horizontal-gallery__figure__caption__copy"></p>
+          <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
+          <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </figcaption>
       </figure>
       <figure class="horizontal-gallery__figure">
         <img src="" alt="">
         <figcaption class="horizontal-gallery__figure__caption">
-          <h3 class="horizontal-gallery__figure__caption__heading"></h3>
-          <p class="horizontal-gallery__figure__caption__copy"></p>
+          <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
+          <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </figcaption>
       </figure>
     </section>
     <section class="content-slider">
       <div class="wrapper">
-        <h2 class="content-slider_heading"></h2>
+        <h2 class="content-slider_heading">Happy Clients</h2>
         <div class="content-slider__slider">
           <div class="content-slider__slider__controls">
           </div>
@@ -123,51 +140,52 @@
           </figure>
           <div class="content-slider__slider__controls">
           </div>
-          <p class="content-slider__slider__copy"></p>
-          <p class="content-slider__slider__client-name"></p>
+          <p class="content-slider__slider__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la cinia aliquet, augue nisi
+            scelerisque velit, vitae ornare lectus lorem nec odio. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          <p class="content-slider__slider__client-name">~ Mary Jane ~</p>
         </div>
       </div>
     </section>
     <section class="news news--latest">
       <div class="wrapper">
-        <h2 class="news__heading"></h2>
+        <h2 class="news__heading">Latest News</h2>
         <article class="news__article">
           <figure class="news__article__figure">
             <img src="" alt="">
           </figure>
-          <h4 class="news__article__heading"></h4>
+          <h4 class="news__article__heading">My trip to italy</h4>
           <p>
-            <a class="news__article__link" href="">Read More &#187;</a>
+            <a class="news__article__link" href="#">Read More &#187;</a>
           </p>
         </article>
         <article class="news__article">
           <figure class="news__article__figure">
             <img src="" alt="">
           </figure>
-          <h4 class="news__article__heading"></h4>
+          <h4 class="news__article__heading">Greece photoshoot</h4>
           <p>
-            <a class="news__article__link" href="">Read More &#187;</a>
+            <a class="news__article__link" href="#">Read More &#187;</a>
           </p>
         </article>
         <article class="news__article">
           <figure class="news__article__figure">
             <img src="" alt="">
           </figure>
-          <h4 class="news__article__heading"></h4>
+          <h4 class="news__article__heading">Travelling with your partner</h4>
           <p>
-            <a class="news__article__link" href="">Read More &#187;</a>
+            <a class="news__article__link" href="#">Read More &#187;</a>
           </p>
         </article>
       </div>
     </section>
     <section class="ask-a-question">
       <div class="wrapper">
-        <h2 class="ask-a-question__heading"></h2>
+        <h2 class="ask-a-question__heading">Ask a question</h2>
         <div class="wrapper">
           <form action="" class="ask-a-question__form">
-            <input type="text" class="ask-a-question__form__input input--ask-a-question">
-            <label for="" class="ask-a-question__form__label label--ask-a-question"></label>
-            <button class="btn"></button>
+            <input type="text" name="your-message" id="your-message" placeholder="Your Message" class="ask-a-question__form__input input--ask-a-question">
+            <label for="your-message" class="ask-a-question__form__label label--ask-a-question"></label>
+            <button type="submit" class="btn">Send</button>
           </form>
         </div>
       </div>
@@ -224,7 +242,7 @@
     <section class="footer-main">
       <div class="wrapper">
         <div class="footer-main__section footer-main__contact">
-          <h3 class="footer-main__heading"></h3>
+          <h3 class="footer-main__heading">Contact</h3>
           <p class="footer-main__contact__details">
             <a class="footer-main__contact__details__link" href="mailto:info@delicate.com">info@delicate.com</a>
           </p>
@@ -234,10 +252,17 @@
           <p "footer-main__contact__details">
             <a class="footer-main__contact__details__link" href="https://goo.gl/maps/mZXzNLSykrS2 ">Toronto, Ontario</a>
           </p>
+          <form action="" class="footer-main__form">
+<input type="text" name="email" id="email" placeholder="your email" class="footer-main__form__input">
+<label for="email" class="footer-main__form__label"></label>
+            <button type="submit" class="btn">Send</button>
+          </form>
         </div>
         <div class="footer-main__section footer-main__section__about">
-          <h3 class="footer-main__heading"></h3>
-          <p class="footer-main__about__copy"></p>
+          <h3 class="footer-main__heading">About Us</h3>
+          <p class="footer-main__about__copy">We are creative and modern web studio. Newest technologies it’s about us. We keep up with time, your web site will
+            contain all of the best and modern trends. We are making web since 2005. Huge experience - is a best helper.
+            </p>
         </div>
         <div class="instagram">
           <h3 class="footer-main__heading">Instagram</h3>
@@ -288,20 +313,27 @@
     <section class="footer-nav ">
       <h3 class="logo-heading">Photography</h3>
       <ul class="footer-nav_list">
-        <li><a href="#" class="footer-nav_link">Home</a></li>
-        <li><a href="#" class="footer-nav_link">Demos</a></li>
-        <li><a href="#" class="footer-nav_link">Blog</a></li>
-        <li><a href="#" class="footer-nav_link">Pages</a></li>
-        <li><a href="#" class="footer-nav_link">Photography</a></li>
-
+        <li>
+          <a href="#" class="footer-nav_link">Home</a>
+        </li>
+        <li>
+          <a href="#" class="footer-nav_link">Demos</a>
+        </li>
+        <li>
+          <a href="#" class="footer-nav_link">Blog</a>
+        </li>
+        <li>
+          <a href="#" class="footer-nav_link">Pages</a>
+        </li>
+        <li>
+          <a href="#" class="footer-nav_link">Photography</a>
+        </li>
       </ul>
-
-
     </section>
     <section class="footer-legal">
-<div class="wrapper">
-  <p class="footer-legal__copy"></p>
-</div>
+      <div class="wrapper">
+<p class="footer-legal__copy">2017 All rights resrved &copy;</p>
+      </div>
     </section>
   </footer>
 </body>
