image content added to html

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <section class="hero">
       <div class="wrapper">
         <div class="hero__content">
+<img src="assets/image-1.jpeg" alt="dreamy view of italian coastline with houses and boats.">
           <h1 class="hero__content__heading">Welcome</h1>
           <p class="hero__content__copy">to my photography website</p>
           <button class="btn">Start</button>
@@ -91,7 +92,7 @@
         <h2 class="testimonials__heading">Testimonials</h2>
         <div class="testimonials__content">
           <figure class="testimonials__content__figure">
-            <img src="" alt="">
+<img src="assets/image-2.jpeg" alt="Image of Kate Sampson">
           </figure>
           <h3 class="testimonials__content__subhead">Kate Sampson</h3>
           <p class="testimonials__content__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed id lob rtis ligula. Phasellus gravida ante eleifend
@@ -101,28 +102,28 @@
     </section>
     <section class="horizontal-gallery">
       <figure class="horizontal-gallery__figure">
-        <img src="" alt="">
+<img src="assets/image-3.jpeg" alt="girl shaking her head/hair side to side at concert">
         <figcaption class="horizontal-gallery__figure__caption">
           <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
           <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </figcaption>
       </figure>
       <figure class="horizontal-gallery__figure">
-        <img src="" alt="">
+<img src="assets/image-4.jpeg" alt="arial shot of small island with church">
         <figcaption class="horizontal-gallery__figure__caption">
           <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
           <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </figcaption>
       </figure>
       <figure class="horizontal-gallery__figure">
-        <img src="" alt="">
+<img src="assets/image-5.jpeg" alt="boats in water approaching a sandy beach">
         <figcaption class="horizontal-gallery__figure__caption">
           <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
           <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
         </figcaption>
       </figure>
       <figure class="horizontal-gallery__figure">
-        <img src="" alt="">
+<img src="assets/image-6.jpeg" alt="italian coastal village">
         <figcaption class="horizontal-gallery__figure__caption">
           <h3 class="horizontal-gallery__figure__caption__heading">Sample Shoot</h3>
           <p class="horizontal-gallery__figure__caption__copy">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -136,7 +137,7 @@
           <div class="content-slider__slider__controls">
           </div>
           <figure class="content-slider__slider__figure">
-            <img src="" alt="">
+<img src="assets/image-7.jpeg" alt="Photo of Mary Jane">
           </figure>
           <div class="content-slider__slider__controls">
           </div>
@@ -151,7 +152,7 @@
         <h2 class="news__heading">Latest News</h2>
         <article class="news__article">
           <figure class="news__article__figure">
-            <img src="" alt="">
+<img src="assets/image-8.jpeg" alt="Photo of italian coast">
           </figure>
           <h4 class="news__article__heading">My trip to italy</h4>
           <p>
@@ -160,7 +161,7 @@
         </article>
         <article class="news__article">
           <figure class="news__article__figure">
-            <img src="" alt="">
+<img src="assets/image-9.jpeg" alt="Greek house with white wall, blue window and door and two chairs outside">
           </figure>
           <h4 class="news__article__heading">Greece photoshoot</h4>
           <p>
@@ -169,7 +170,7 @@
         </article>
         <article class="news__article">
           <figure class="news__article__figure">
-            <img src="" alt="">
+<img src="assets/image-10.jpeg" alt="girl walking through narrow street">
           </figure>
           <h4 class="news__article__heading">Travelling with your partner</h4>
           <p>
@@ -211,25 +212,25 @@
         </nav>
         <div class="gallery__images">
           <figure class="gallery__images__single-image">
-            <img src="" alt="">
+<img src="assets/image-11.jpeg" alt="Waterfall">
             <figcaption class="gallery__images__caption">
               <h3 class="gallery__images__caption__heading">Text Here</h3>
             </figcaption>
           </figure>
           <figure class="gallery__images__single-image">
-            <img src="" alt="">
+<img src="assets/image-12.jpeg" alt="Arial photo of costal town">
             <figcaption class="gallery__images__caption">
               <h3 class="gallery__images__caption__heading">Text Here</h3>
             </figcaption>
           </figure>
           <figure class="gallery__images__single-image">
-            <img src="" alt="">
+<img src="assets/image-13.jpeg" alt="many people and a boat on a white sandy beach with turquoise water">
             <figcaption class="gallery__images__caption">
               <h3 class="gallery__images__caption__heading">Text Here</h3>
             </figcaption>
           </figure>
           <figure class="gallery__images__single-image">
-            <img src="" alt="">
+<img src="assets/image-14.jpeg" alt="Arial view of the coast featuring a sandy beach and bright blue water.">
             <figcaption class="gallery__images__caption">
               <h3 class="gallery__images__caption__heading">Text Here</h3>
             </figcaption>
@@ -268,32 +269,32 @@
           <h3 class="footer-main__heading">Instagram</h3>
           <div class="instagram__container">
             <figure class="instagram__container__figure">
-              <img src="" alt="">
+<img src="assets/image-15.jpeg" alt="Paddle boarder paddling over turquoise water">
             </figure>
           </div>
           <div class="instagram__container">
             <figure class="instagram__container__figure">
-              <img src="" alt="">
+<img src="assets/image-16.jpeg" alt="orange door with laundry hanging">
             </figure>
           </div>
           <div class="instagram__container">
             <figure class="instagram__container__figure">
-              <img src="" alt="">
+<img src="assets/image-17.jpeg" alt="yacht in bay">
             </figure>
           </div>
           <div class="instagram__container">
             <figure class="instagram__container__figure">
-              <img src="" alt="">
+<img src="assets/image-18.jpeg" alt="bicycle against wall">
             </figure>
           </div>
           <div class="instagram__container">
             <figure class="instagram__container__figure">
-              <img src="" alt="">
+<img src="assets/image-19.jpeg" alt="coast">
             </figure>
           </div>
           <div class="instagram__container">
             <figure class="instagram__container__figure">
-              <img src="" alt="">
+<img src="assets/image-20.jpeg" alt="street with different colour houses">
             </figure>
           </div>
           <div class="instagram__container">
