responsive down until 940px

--- a/index.html
+++ b/index.html
@@ -284,19 +284,24 @@
       <div class="wrapper">
         <div class="footer-main__section footer-main__contact">
           <h3 class="footer-main__heading">Contact</h3>
-          <p class="footer-main__contact__details"><i class="fas fa-envelope"></i>
+          <p class="footer-main__contact__details">
+            <i class="fas fa-envelope"></i>
             <a class="footer-main__contact__details__link" href="mailto:info@delicate.com">info@delicate.com</a>
           </p>
-          <p "footer-main__contact__details"><i class="fas fa-phone"></i>
+          <p "footer-main__contact__details">
+            <i class="fas fa-phone"></i>
             <a class="footer-main__contact__details__link" href="tel:123-456-7890">123 456-7890</a>
           </p>
-          <p "footer-main__contact__details"><i class="fas fa-map-marker-alt"></i>
+          <p "footer-main__contact__details">
+            <i class="fas fa-map-marker-alt"></i>
             <a class="footer-main__contact__details__link" href="https://goo.gl/maps/mZXzNLSykrS2 ">Toronto, Ontario</a>
           </p>
           <form action="" class="footer-main__form">
             <input type="email" name="email" id="email" placeholder="your email" class="footer-main__form__input">
             <label for="email" class="footer-main__form__label"></label>
-            <button type="submit" class="footer-btn"><i class="fas fa-paper-plane"></i></button>
+            <button type="submit" class="footer-btn">
+              <i class="fas fa-paper-plane"></i>
+            </button>
           </form>
         </div>
         <div class="footer-main__section footer-main__section__about">
@@ -348,29 +353,43 @@
                 <img src="assets/image-22.jpeg" alt="different coloured houses along a pier">
               </figure>
             </div>
+          </div>
         </div>
+            <!-- <div class="social">
+              <!-- <div class="social__icons"> -->
+                <!-- <div class="social__icons__facebook-icon"> -->
+                  <!-- <i class="fab fa-facebook-square"></i> -->
+                <!-- </div> -->
+                <!-- <div class="social__icons__instagram-icon"> -->
+                  <!-- <i class="fab fa-instagram"></i> -->
+                <!-- </div> -->
+                <!-- <div class="social__icons__pinterest-icon"> -->
+                  <!-- <i class="fab fa-pinterest-square"></i> -->
+                <!-- </div> -->
+              <!-- </div> -->
+            <!-- </div> -->
       </div>
     </section>
     <section class="footer-nav">
       <div class="wrapper">
-      <h3 class="logo-heading">Photography</h3>
-      <ul class="footer-nav_list">
-        <li class="footer-nav__list__link">
-          <a href="#">Home</a>
-        </li>
-        <li class="footer-nav__list__link">
-          <a href="#">Demos</a>
-        </li>
-        <li class="footer-nav__list__link">
-          <a href="#">Blog</a>
-        </li>
-        <li class="footer-nav__list__link">
-          <a href="#">Pages</a>
-        </li>
-        <li class="footer-nav__list__link">
-          <a href="#">Photography</a>
-        </li>
-      </ul>
+        <h3 class="logo-heading">Photography</h3>
+        <ul class="footer-nav_list">
+          <li class="footer-nav__list__link">
+            <a href="#">Home</a>
+          </li>
+          <li class="footer-nav__list__link">
+            <a href="#">Demos</a>
+          </li>
+          <li class="footer-nav__list__link">
+            <a href="#">Blog</a>
+          </li>
+          <li class="footer-nav__list__link">
+            <a href="#">Pages</a>
+          </li>
+          <li class="footer-nav__list__link">
+            <a href="#">Photography</a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="footer-legal">
